--- a/css/widgets-ecom.less
+++ b/css/widgets-ecom.less
@@ -6,45 +6,24 @@
 .widget.ecombasket {
 	
 	.ecombasket-pull {
-		
-		
 		width: auto;
-		height: auto;
-
-		padding: 5px 15px;
-		display: inline-block;
-		cursor: pointer;
-		-webkit-user-select: none;  /* Chrome all / Safari all */
-		-moz-user-select: none;     /* Firefox all */
-		-ms-user-select: none;      /* IE 10+ */
-		line-height: (@font-swatch7-font-size * 2.5);
-		border-radius: 5px;
-		font-family: @font-swatch7-font-family;
-		font-size: @font-swatch7-font-size;
-		font-weight:@font-swatch7-font-weight;
-		background-color: @font-swatch7-background-color;
-		color: @font-swatch7-color;
-		text-decoration: none;
-		letter-spacing: 1px;
-		text-shadow: none;
-
-		&:hover {
-			background-color: @font-swatch7-background-color-hover;
-		}
-	
-	
+		height: (@font-swatch7-font-size * 3.5);
+		line-height: (@font-swatch7-font-size * 3.5);
 		.basket-count, p {
 			font-weight: 400;
 			padding: 0;
 			margin: 0;
 		}
+		p {
+			line-height: (@font-swatch7-font-size * 3.5);
+		}
 	}
 
 
 	&.show-content .ecombasket-list-container {
-		background: mix(@color-swatch2, @color-swatch1, 10%);
-		padding: 32px;
-		border-radius: 7px;
+		background-color: lighten(@color-swatch5,46%);
+		padding: 16px;
+		border-radius: 3px;
 		position: relative;
 		margin-top: 47px;
 
@@ -64,7 +43,7 @@
 			height: 0;
 			border-style: solid;
 			border-width: 0 20.5px 27px 20.5px;
-			border-color: transparent transparent mix(@color-swatch2, @color-swatch1, 10%) transparent;
+			border-color: transparent transparent lighten(@color-swatch5,46%) transparent;
 		}
 	}
 
@@ -212,7 +191,7 @@
 	                	margin: 0;
 
 	                	@media @desktop {
-	                		max-width: 50%;
+	                		max-width: 500px;
 	                		margin: 0 auto;
 	                	}
 
@@ -250,6 +229,9 @@
 					    	margin-top: 26px;
 					    }
 	                	
+	                	label {
+	                		display: none;
+	                	}
 
 	                	input {
 	                		// Flex
@@ -420,6 +402,12 @@
 
 
 // ======= Widget: e-com Product Detail
+
+// Hiding checkout button with parameter hidden
+.widget.ecomproduct .ecom-product .ecom-product-go-to-checkout-btn[hidden] {
+  display: none !important;
+}
+
 .widget.ecomproduct {
 	
 	.ecom-product {
@@ -433,7 +421,7 @@
 			}
 			.ecom-product-image-list {
 				padding: 17px 0 0 0;
-				border-top: 1px solid lighten(@color-swatch5,20%);
+				border-top: 1px solid fade(@color-swatch5,20%);
 				.ecom-product-image-wrap {
 					margin: 0 17px 17px 0;
 					cursor: pointer;
@@ -490,7 +478,7 @@
 			// Categories and tags
 			.ecom-product-cattag {
 				margin: 0 0 1em 0;
-				border-top: 1px solid lighten(@color-swatch5,20%);
+				border-top: 1px solid fade(@color-swatch5,20%);
 				padding: 1em 0 0 0;
 				.ecom-product-category {
 					.store-category-link {
@@ -502,14 +490,11 @@
 						display: inline-block;
 						padding: 0em 0.7em;
 						border-radius: 5px;
-						background-color: @font-swatch7-background-color;
+						background-color: @color-swatch2;
 						color: @font-swatch7-color;
 						letter-spacing: 1px;
 
-						&:hover {
-							text-decoration: none;
-							background-color: @font-swatch7-background-color-hover;
-						}
+						
 					}
 				}
 			}
@@ -542,6 +527,18 @@
 	.ecom-featuredproducts-wrap {
 		
 		.clearfix;
+
+		// 2 products versions, span across entire width
+		&.products-2 {
+			.ecom-featuredproducts-product {
+				margin-right: 3%;
+				width: 48.5%;
+			}
+			.ecom-featuredproducts-product:last-of-type {
+				margin-right: 0;
+			}
+		}
+
 		// Product
 		.ecom-featuredproducts-product {
 			margin-left: 0;
@@ -667,27 +664,28 @@
 
 
 
-// ======= Widget: e-com Checkout
+// ======= Widget: e-com Basket Summary
 @bp-checkout-compact: ~"only screen and (max-width : 820px)";
 
-.widget.ecomcheckout {
-	
+.widget.ecombasketsummary {
 	// Title
-	.checkout-title {
-		border-bottom: 5px solid lighten(@color-swatch5,20%);
+	.basket-summary-title {
+		border-bottom: 5px solid fade(@color-swatch2, 30%);
 		@media @mobile {
-			border-bottom: 4px solid lighten(@color-swatch5,20%);
+			border-bottom: 4px solid fade(@color-swatch2, 30%);
 		}
 	}
 
 	// Empty basket
-	.checkout-empty {
+	.basket-summary-empty-copy {
 		margin: 2em 0;
 	}
 
 	// Checkout Items
-	table.js-checkout-itemstable {
+	table.basket-summary-items-table {
 		margin-bottom: 30px;
+		border-spacing: 0;
+        width: 100%;
 
 
 		tr {
@@ -716,25 +714,25 @@
 				display: none;
 			}
 			th {
-				border-bottom: 1px solid @color-swatch2;
+				border-bottom: 1px solid fade(@color-swatch2, 30%);
 				&:nth-child(2) {
-					border-right: 1px solid mix(@color-swatch2, #fff, 10%);
+					border-right: 1px solid fade(@color-swatch2, 30%);
 				}
 				
 			}
 		}
 		// Item
-		tr.checkout-items {
+		tr.basket-summary-items {
 			@media @mobile {
 				position: relative;
-				border-top: 1px solid @color-swatch2;
+				border-top: 1px solid fade(@color-swatch2, 30%);
 				padding: 0 0 10px 0;
 				margin: 0 0 10px 0;
 
 			}
 
 			td {
-				border-bottom: 1px solid @color-swatch2;
+				border-bottom: 1px solid fade(@color-swatch2, 30%);
 				@media @mobile {
 					border-bottom: none;
 				}
@@ -749,13 +747,20 @@
 					height: 0;
 					padding-bottom: 100%;
 					float: none;
+					background-size: cover;
+					background-position: center;
 					@media @mobile {
-						width: 60px;
-						height: 60px;
 						padding-bottom: 0;
+						height: auto;
+						background-position: -1000px;
 					}
 					img {
-
+						display: none;
+						@media @mobile {
+							display: block;
+							width: 60%;
+							height: auto;
+						}
 					}
 				}
 			}
@@ -765,7 +770,7 @@
 				padding-right: 170px;
 				vertical-align: top;
 				position: relative;
-				border-right: 1px solid mix(@color-swatch2, #fff, 10%);
+				border-right: 1px solid fade(@color-swatch2, 30%);
 				@media @bp-checkout-compact {
 					padding-right: 0;
 				}
@@ -775,7 +780,7 @@
 					border-right: none;
 				}
 				// Name
-				.checkout-productname {
+				.basket-summary-productname {
 					font-size: @font-swatch4-font-size;
 					display: block;
 					@media @mobile {
@@ -786,14 +791,14 @@
 					}
 				}
 				// Price
-				.checkout-pricepu {
+				.basket-summary-pricepu {
 					font-size: @font-swatch4-font-size;
 					@media @mobile {
 						font-size: bkscale(@font-swatch4-font-size, 0.8);
 					}
 				}
 				// Quantity label
-				.checkout-quantity {
+				.basket-summary-quantity {
 					width: 150px;
 					position: absolute;
 					right: 20px;
@@ -811,7 +816,7 @@
 					}
 				}
 				// Quantity button
-				.checkout-quantitybtn {
+				.basket-summary-quantitybtn {
 					background-color: transparent;
 					margin: 0;
 					position: absolute;
@@ -829,14 +834,21 @@
 						width: 130px;
 					}
 					button {
+						font-family: @font-swatch5-font-family;
+						font-weight: 700;
+						font-size: 16px;
 						line-height: 40px;
+						border: none;
+						cursor: pointer;
 						padding: 0;
 						color: @color-swatch1;
-						background-color: @color-swatch3;
+						background-color: @color-swatch2;
 						position: absolute;
 						top: 0;
 						width: 40px;
 						height: 40px;
+
+
 						@media @mobile {
 							width: 30px;
 							height: 30px;
@@ -858,12 +870,14 @@
 					}
 					// Count
 					span {
-						background-color: mix(@color-swatch2, #fff, 6%);
+						background-color: darken(@color-swatch1, 6%);
+						color: invert(@color-swatch2);
 						height: 40px;
 						line-height: 40px;
 						position: absolute;
 						left: 40px;
 						right: 40px;
+						text-align: center;
 						top: 0;
 						display: block;
 						width: 70px;
@@ -876,7 +890,8 @@
 					}
 				}
 			}
-			td.checkout-amount {
+			td.basket-summary-amount {
+				text-align: right;
 				@media @mobile {
 					text-align: left;
 					position: absolute;
@@ -890,15 +905,16 @@
 		tbody tr:last-child {
 			td {
 				font-size: @font-swatch4-font-size;
-				border-top: 5px solid @color-swatch2;
+				border-top: 5px solid fade(@color-swatch2, 30%);
 				@media @mobile {
 					text-align: left;
 					border-top: none;
 					font-size: bkscale(@font-swatch4-font-size, 0.9);
 				}
-				&.checkout-subtotal {
+				&.basket-summary-subtotal {
+					text-align: right;
 					@media @mobile {
-						border-top: 5px solid @color-swatch2;
+						border-top: 5px solid fade(@color-swatch2, 30%);
 					}
 				}
 			}
@@ -909,12 +925,23 @@
 
 
 
+	
+
+	// Legal links
+	.basket-summary-legal-links {
+		margin-top: 2em;
+	}
+}
+
+
+
+.widget.ecomcheckout {
 	// Check out form
 	.checkout-form {
 		.clearfix;
 		.delivery {
-			border-bottom: 5px solid lighten(@color-swatch5,20%);
 			margin-bottom: 20px;
+			
 			@media @mobile {
 				margin-bottom: 10px;
 			}
@@ -959,7 +986,7 @@
 			
 
 		}
-		.checkout-total-amount {
+		.basket-summary-total-amount {
 			font-size: @font-swatch4-font-size;
 			line-height: @font-swatch7-line-height;
 			
@@ -971,16 +998,11 @@
 				line-height: bkscale(@font-swatch4-line-height, 1.2);
 			}
 		}
-		.checkout-order-button {
+		.basket-summary-order-button {
 			float: right;
 			@media @mobile {
 				float: none;
 			}
 		}
-	}
-
-	// Legal links
-	.checkout-legal-links {
-		margin-top: 2em;
 	}
 }
