--- a/css/common-forms.less
+++ b/css/common-forms.less
@@ -33,7 +33,7 @@
 	font-size: @font-swatch7-font-size;
 	font-weight:@font-swatch7-font-weight;
 	background-color: @color-swatch3;
-	color: @color-swatch1;
+	color: @font-swatch7-color;
 	text-decoration: none;
 	letter-spacing: 1px;
 	text-shadow: none;
