--- a/css/widgets-ecom.less
+++ b/css/widgets-ecom.less
@@ -31,6 +31,10 @@
 			padding: 20px;
 		}
 
+		p {
+			padding: 0;
+		}
+
 		// Top arrow
 		&:before {
 			content: "";
@@ -807,7 +811,6 @@
 					right: 20px;
 					display: block;
 					top: 20px;
-					height: 30px;
 					line-height: 30px;
 					text-align: center;
 					font-size: bkscale(@font-swatch5-font-size, 0.8);
