--- a/stylesheet.less
+++ b/stylesheet.less
@@ -168,10 +168,7 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
       -webkit-align-self: auto;
       -ms-flex-item-align: auto;
       align-self: auto;
-
       min-width: 30%;
-
-      
 
       @media @mobile {
         display: block;
@@ -180,10 +177,6 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
       @media @tablet {
         padding-right: 50px;
         float: left;
-      }
-
-      .widget.companyname {
-        
       }
     }
     .extendednavigation {
@@ -221,6 +214,11 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 .widget.companyname {
   display: inline-block;
   vertical-align: middle;
+  a {
+    @media @mobile {
+      line-height: bkscale(@font-swatch10-line-height, 0.8);
+    }
+  }
 }
 
 
@@ -290,6 +288,9 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
     .text {
       color: @color-swatch2;
     }
+  }
+  &:last-child a {
+    padding-right: 0;
   }
 }
 
@@ -1022,16 +1023,6 @@ hr.line {
     margin-bottom: 1em;
   }
 }
-
-
-/* ===============================
-   TWEET THIS WIDGET
-   =============================== */
-
-.widget.tweet {
-   padding: 14px 0; 
-}
-
 
 
 /* ==================================
