--- a/css/widgets-blog.less
+++ b/css/widgets-blog.less
@@ -313,6 +313,7 @@
 							letter-spacing: 1px;
 							border-radius: 3px;
 							box-shadow: 0px 2px 0px darken(@color-swatch3,10%);
+							margin-bottom: 10px;
 
 							&:hover {
 								text-decoration: none;
