--- a/stylesheet.less
+++ b/stylesheet.less
@@ -436,6 +436,9 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
    =============================== */
 
 .widget.clicktocall {
+  @media @mobile {
+    margin: 10px 0;
+  }
   a, a:hover {
     padding: 0 1.6em;
     padding-left: 50px;
