--- a/default.twig
+++ b/default.twig
@@ -8,7 +8,7 @@
     <div class="wrapper clearfix">
         <div class="companyheader clearfix">
             {{widget('logo', 'logo', {"defaultlogo": asset('images/logo.png')})|raw}}
-            {{widget('companyname', 'companyname', {"business": "Pearl"})|raw}}
+            {{widget('companyname', 'companyname', {"business": "profile"})|raw}}
         </div>
         {{widget('extendednavigation', 'navigationheader', {"align":"right"})|raw}}
     </div>
