--- a/css/common-forms.less
+++ b/css/common-forms.less
@@ -4,6 +4,7 @@
 // Buttons
 .widget.feature .feature-bgimg .content button,
 .contactform button.btn,
+.advancedcontactform button,
 .widget.button button,
 .widget .btn,
 .widget.profile form button,
@@ -80,6 +81,7 @@
 
 // Text Inputs
 .contactform input, .contactform textarea,
+.advancedcontactform input, .advancedcontactform textarea, .advancedcontactform select,
 .widget.profile form fieldset input.email,
 .signupform fieldset input.email,
 .blogsearch input.blog-search-input,
@@ -122,6 +124,7 @@
 
 
 .contactform input.email, .contactform textarea,
+.advancedcontactform input, .advancedcontactform textarea, .advancecontactform select,
 .fonectacontactform .form-group input,
 .fonectacontactform textarea {
 	background-color: @color-swatch1;
@@ -129,6 +132,7 @@
 
 
 .contactform textarea,
+.advancedcontactform textarea,
 .fonectacontactform textarea {
 	line-height: bkscale(@font-swatch7-line-height, 0.7);
 	min-height: 10em;
@@ -143,6 +147,7 @@
 
 // Labels
 .contactform label,
+.advancedcontactform label,
 .signupform fieldset label,
 .blog-search-form label,
 .widget.ecomcheckout .delivery label,
