--- a/stylesheet.less
+++ b/stylesheet.less
@@ -21,6 +21,7 @@ body {
 }
 
 .contactform input, .contactform textarea,
+.advancedcontactform input, .advancedcontactform textarea,
 .widget.profile form fieldset input.email,
 .signupform fieldset input.email,
 .blogsearch input.blog-search-input,
@@ -1022,7 +1023,8 @@ hr.line {
    =============================== */
 
 .contactform.widget,
-.fonectacontactform {
+.fonectacontactform,
+.advancedcontactform {
   form {
     display: block;
     padding: 20px;
