--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1504,7 +1504,7 @@ hr.line {
 
 @media only screen and (min-width: 1140px) {
   .wrapper {
-    width: 960px; /* 1140px - 10% for margins */
+    max-width: 960px; /* 1140px - 10% for margins */
     margin: 0 auto;
   }
 }
